[package]
name = "ws-vnc"
version = "0.1.0"
authors = ["Marcello Seri <marcello.seri@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mseri/ws-vnc"
homepage = "https://github.com/mseri/ws-vnc"
description = "A VNC client that connects via websockets"

[dependencies]
vnc = "0.4"
ws = "0.6.0"
byteorder = "0.5"
log = "0.3"
env_logger = "0.3"
clap = "1.5"
sdl2 = "0.13"
x11 = "2.3"

[[bin]]
name = "ws-vnc"
path = "main.rs"